Fix UI/UX
Make the UI actually passable

	* align elements
	* harmonize dimensions of whitespace between elements
	* add halo to overlay elements, so that they are visible on diverse background
	* put footer on darker background
	* various colour changes
	* overlay the score inside the game board
	* round gameboard's corners

Start the game straight away on page load

--- a/style.css
+++ b/style.css
@@ -27,39 +27,51 @@
 
 body {
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+
 }
 
 * {
-  font-family: Comic Sans MS, Comic Sans, cursive;
+  font-family: sans-serif;
 }
 
+#game-container,
 #game-board, .board-overlay {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(20, 1fr);
     width: calc(10 * var(--grid-size));
     height: calc(20 * var(--grid-size));
     border: 1px solid black;
-  
     background-color: lightblue;
-    position: absolute;
-    top: 0;
-    left: 0;
+    overflow: hidden; /* the last piece can stick over the top of the board when the game is over */
+    border-radius: calc(var(--grid-size) * 0.5);
   }
 
+#controls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(2.5 * var(--grid-size));
+  padding-left: 20px;
+}
+
 .button {
-    position: absolute;
-    right: 0;
-    width: 100px;
-    height: 38px;
+    width: 100%;
     font-size: 24px;
     background-color: blue;
     color: white;
     border: none;
-    border-radius: 5px
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 4px;
 }
 .start.button {
     top: 0;
+    background-color: green;
+    color: #DDD;
 }
 .pause.button {
     top: 42px;
@@ -86,19 +98,26 @@ body {
 
   #score {
     position: absolute;
-    top: calc(38px * 2 + 4px * 3);
-    right: 0;
-    font-size: 24px;
-    border-radius: 5px;
+    top: 0;
+    left: 0;
   }
-  #score .label::after {
-    content: ":";
+  #score .label {
+    display: none;
+  }
+  #score .value::before {
+    content: "Score: ";
+  }
+  #score .value {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
   }
 
   
   @media (max-width: 600px) {
-    #game-board, .board-overlay {
-      transform: scale(0.85) translate(-7%, -15%);
+    #game-container {
+      /* transform: scale(0.85) translate(-7%, -15%); */
     }
   }
   
@@ -113,6 +132,21 @@ body {
 
 
   .board-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1; /* This is the key to making the overlay appear on top of the game board */
+    text-shadow: 0 0 1ex lightblue;
+  }
+  #score {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 24px;
+    background: none;
+  }
+  #game-over {
+    z-index: 2;
     background-color: rgba(0, 0, 0, 0.2);
     display: none;
   }
@@ -126,7 +160,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -95%); /* align slightly above the center */
     font-size: 36px;
   }
 
@@ -172,9 +206,20 @@ footer {
   bottom: 0;
   width: 100%;
   text-align: center;
+  background-color: rgba(0,0,0,0.8);
+  padding: 10px;
+  color: #DDD;
 }
 
 footer a {
   font-size: 16px;
   text-decoration: none;
 }
+
+footer a:hover {
+  text-decoration: underline;
+  color: white;
+}
+footer a:link{color:inherit}
+footer a:active{color:inherit}
+footer a:visited{color:inherit}
